--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
   </dependencies>
 
   <build>
+    <finalName>${project.artifactId}</finalName>
     <plugins>
       <plugin>
         <groupId>io.spring.javaformat</groupId>
